align star ratings and review counts (bug 767504)

--- a/media/css/mkt/ratings.less
+++ b/media/css/mkt/ratings.less
@@ -339,14 +339,14 @@ header.product {
             display: block;
             height: 4px;
             position: relative;
-            margin: 5px 10px 0 3px;
+            margin: 10px 10px 0 3px;
             &:before {
                 background: @barely-gray;
                 content: "";
                 display: block;
                 height: 22px;
                 position: absolute;
-                top: -6px;
+                top: -11px;
                 left: -2px;
                 width: 1px;
             }
